# cpp_multi_so_test

./: README.md
cpp_multi_so/depend_so/: CMakeLists.txt
cpp_multi_so/depend_so/src/: depend1.cpp  depend2.cpp
cpp_multi_so/run_multi_so/: CMakeLists.txt
cpp_multi_so/run_multi_so/src/: main.cpp
cpp_multi_so/test_multi_so/: CMakeLists.txt
cpp_multi_so/test_multi_so/src/: a.cpp  b.cpp  c.cpp
